fixed the variety section contents making them uniformly aligned

--- a/frontend/src/styles/userPage.scss
+++ b/frontend/src/styles/userPage.scss
@@ -107,8 +107,19 @@ body {
           letter-spacing: 1px;
           cursor: pointer;
 
+          .iconContainer {
+            padding: 10px;
+            background-color: white;
+            height: 40px;
+            width: 40px;
+            border-radius: 50px;
+            margin-bottom: 5px;
+          }
+
           .link {
             color: white;
+            text-decoration: none;
+            font-weight: 600;
           }
 
           @media screen and (min-width: 700px) {
